[gd_scene load_steps=5 format=3 uid="uid://bh0q61c6cnd24"]

[ext_resource type="Script" path="res://Scenes/Player/player_laser.gd" id="1_g1j0b"]
[ext_resource type="Texture2D" uid="uid://r0ajwdn2vmme" path="res://Scenes/Player/player_laser.png" id="2_hneki"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rp1t7"]
size = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jauq3"]
size = Vector2(1, 4)

[node name="PlayerLaser" type="Area2D"]
collision_layer = 16
collision_mask = 14
script = ExtResource("1_g1j0b")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hneki")

[node name="PlayerLaserHead" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_rp1t7")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ExplosionRadius" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource("RectangleShape2D_jauq3")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="ExplosionRadius" to="." method="_on_explosion_radius_area_entered"]
